--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wishlist App</title>
     <meta name="description" content="Organize all your wishes in one beautiful app" />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="Lovable" 
 
     <meta property="og:title" content="Wishlist App" />
     <meta property="og:description" content="Organize all your wishes in one beautiful app" />
